--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -2,3 +2,5 @@
   - First version of flashmessage
   - Run table migrations
   - create_settings_table.php
+1.0.2:
+  - Fix some bug with Rainlab.User login form errors
